Improve imprint (no imprint link if no directory)

--- a/layouts/partials/imprint.html
+++ b/layouts/partials/imprint.html
@@ -4,7 +4,7 @@
     {% elif cfg.imprint[cfg.l10n.default] %}
         {% set im = cfg.imprint[cfg.l10n.default] %}
     {% endif %}
-    {% if im and im.url and im.text %}
+    {% if has_imprint and im and im.url and im.text %}
         <div id='imprint'><a href="{{cfg.site.url}}{{im.url}}">{{im.text}}</a></div>
     {% endif %}
 {% endif %}
