change language to locale

--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -1,10 +1,10 @@
-{% if cfg.footer and cfg.footer[language] and cfg.footer[language].copyright %}
+{% if cfg.footer and cfg.footer[locale] and cfg.footer[locale].copyright %}
     <ul class="copyright">
-    {% for c in cfg.footer[language].copyright %}
+    {% for c in cfg.footer[locale].copyright %}
         <li class="copyright-item">
         {{ c.text }}
-        {% if cfg.footer[language].license %}
-            <a class="copyright-link" href="{{cfg.site.url}}{{ cfg.footer[language].license.url }}">{{ cfg.footer[language].license.text }}</a>
+        {% if cfg.footer[locale].license %}
+            <a class="copyright-link" href="{{cfg.site.url}}{{ cfg.footer[locale].license.url }}">{{ cfg.footer[locale].license.text }}</a>
         {% endif %}
         </li>
     {% endfor %}
