--- a/layouts/partials/gitinfo.html
+++ b/layouts/partials/gitinfo.html
@@ -1,6 +1,5 @@
 {% if git %}
-{% if git.Subject and git.AbbreviatedHash and git.Url %}
-<li><a href="{{ git.Url }}/{{ git.File }}">{{ git.Subject }} ({{ git.AbbreviatedHash }})</a></li>
+{% if git.Subject and git.AbbreviatedHash and git.UrlBlob %}
+<li><a href="{{ git.UrlCommit }}">{{ git.Subject }} ({{ git.AbbreviatedHash }})</a></li>
 {% endif %}
 {% endif %}
-
