add list-siblings first try

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -30,6 +30,12 @@
                </ol>
     {% endif %}
              </article>
+{% if siblings and frontmatter.list %}             
+             <article>
+{% include "partials/list-siblings.html %}
+            </article>
+{% endif %}
+
 
 {% endif %}
         </aside>
