--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -32,7 +32,7 @@
              </article>
 {% if siblings and frontmatter.list %}             
              <article>
-{% include "partials/list-siblings.html %}
+{% include "partials/list-siblings.html" %}
             </article>
 {% endif %}
 
