--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -19,7 +19,7 @@
              <article>
                  <header>
     {% if toc %}
-                     <h2>{{ toc }}</h2>
+                     <h2>{{ toc_text }}</h2>
     {% endif %}
                  </header>
     {% if nav %}
