--- a/layouts/title/index.html
+++ b/layouts/title/index.html
@@ -28,6 +28,7 @@
         </div>
         <section>
            {{ body }}
+           {% include "partials/card-siblings.html"%}
          </section>
 {% include "partials/navigation.html" %}
 
