--- a/layouts/title/index.html
+++ b/layouts/title/index.html
@@ -28,7 +28,7 @@
         </div>
         <section>
            {{ body }}
-           {% include "partials/card-siblings.html"%}
+           {% include "partials/cards-siblings.html"%}
          </section>
 {% include "partials/navigation.html" %}
 
