impove cards design

--- a/layouts/partials/cards-siblings.html
+++ b/layouts/partials/cards-siblings.html
@@ -5,7 +5,9 @@
         <a class="cards-link" href="{{ obj.url }}">
             <h4 class="cards-title">{{ obj.title }}</h4>
         </a>
+        <div class="cards-description">
             {{ obj.description }}
+        </div>
     </div>
    {% endfor %}
 </div>
