fix meta tag generator

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,7 +8,7 @@
 {% if keywords %}{% for keyword in keywords %}
         <meta name="keyword" content="{{ keyword }}">
 {% endfor %}{% endif %}
-        <meta name="generator" content="{{ generator }}" />
+        <meta name="generator" content="{{ generator }}">
         <!--<link rel="stylesheet" href="/css/markdown-style.css" type="text/css" media="all" />-->
         <link rel="stylesheet" href="/css/default.css" type="text/css" media="all" />
         <!--<script src="/highlight.js/src/highlight.js"></script>-->
