--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,11 +9,16 @@
         <meta name="keyword" content="{{ keyword }}">
 {% endfor %}{% endif %}
         <meta name="generator" content="{{ generator }}">
-        <!--<link rel="stylesheet" href="/css/markdown-style.css" type="text/css" media="all" />-->
+
         <link rel="stylesheet" href="/css/default.css" type="text/css" media="all" />
-        <!--<script src="/highlight.js/src/highlight.js"></script>-->
+{% if cfg.default.local %}
+        <script src="/js/query.min.js"></script>
+        <link rel="stylesheet" href="/css/hljs/highlight-default.min.css">
+        <script src="/js/hljs/highlight.min.js"></script>
+{% else %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+{% endif %}
     </head>
 
