--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,7 @@
     <head>
         <title>{{ title }}</title>
         <meta charset="utf-8">
+        <meta name="type" content="{{ type }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 {% if description %}
         <meta name="description" content="{{ description }}">
