doc type now support card siblings listing

--- a/layouts/doc/index.html
+++ b/layouts/doc/index.html
@@ -36,6 +36,7 @@
 {% endif %}
 
 {% include "partials/list-siblings.html" %}
+{% include "partials/card-siblings.html" %}
 
 {% include "partials/footer.html" %}
 
