--- a/layouts/doc/index.html
+++ b/layouts/doc/index.html
@@ -36,7 +36,7 @@
 {% endif %}
 
 {% include "partials/list-siblings.html" %}
-{% include "partials/card-siblings.html" %}
+{% include "partials/cards-siblings.html" %}
 
 {% include "partials/footer.html" %}
 
