--- a/layouts/keyword/index.html
+++ b/layouts/keyword/index.html
@@ -2,7 +2,7 @@
 {% if git %}
 {%   set my_text="git.Lastmod git.Subject (git.AbbreviatedHash)" %}
 {% elif frontmatter.date %}
-{%  set_my_text="frontmatter.date.strftime('%A, %B %d, %Y')" %}
+{%  set my_text=frontmatter.date.strftime('%A, %B %d, %Y') %}
 {% elif cfg.description and cfg.description[locale] and  cfg.description[locale].text %}
 {%     set my_text = cfg.home[locale].text %}
 {% else %}
