add list-keyword.html partial (to print Keyword/Name.html)

--- a/layouts/keyword/index.html
+++ b/layouts/keyword/index.html
@@ -28,23 +28,8 @@
 
 {{ body }}
 
-{% if frontmatter.is_entity %}
-    {% if kw %}
-    <div class="keyword">
-       {%for obj in kw %}
-       <div class="keyword-item"><a class="keyword-link" href="{{ obj.url }}">{{ obj.title }}</a></div>
-       {% endfor %}
-    </div>
-    {% endif %}
-{% endif %}
-{% if siblings %}
-    <hr>
-    <div class="siblings">
-      {% for obj in siblings %}
-      <div class="siblings-item"><a class="siblings-link" href="{{ obj.url }}">{{  obj.title  }}</a></div>
-      {% endfor %}
-    </div>
-{% endif %}
+{% include "partials/list-keyword.html" %} {# Tags/Berlin.html #}
+{% include "partials/list-siblings.html" %}{# Tags/ (Tags/index.html) #}
 
 {% include "partials/footer.html" %}
 
