--- a/layouts/keyword/index.html
+++ b/layouts/keyword/index.html
@@ -29,7 +29,14 @@
 {{ body }}
 
 {% include "partials/list-keyword.html" %} {# Tags/Berlin.html #}
-{% include "partials/list-siblings.html" %}{# Tags/ (Tags/index.html) #}
+{% if siblings %}
+    <hr>
+    <div class="siblings">
+      {% for obj in siblings %}
+      <div class="siblings-item"><a class="siblings-link" href="{{ obj.url }}">{{  obj.title  }}</a></div>
+      {% endfor %}
+    </div>
+{% endif %}
 
 {% include "partials/footer.html" %}
 
