change date url to home

--- a/layouts/keyword/index.html
+++ b/layouts/keyword/index.html
@@ -13,7 +13,7 @@
 
         <div id="header">
 {% include "partials/home.html" %}
-            <a href="{{my_url}}">
+            <a href="{{cfg.site.url}}{{home_url}}">
             <div class="description">{{my_text}}</div>
             </a>
         </div>
