add partials "list-siblings" to page type "title"

--- a/layouts/title/index.html
+++ b/layouts/title/index.html
@@ -29,6 +29,7 @@
         <section>
            {{ body }}
            {% include "partials/cards-siblings.html"%}
+           {% include "partials/list-siblings.html"%}
          </section>
 {% include "partials/navigation.html" %}
 
