Improve writing in comment

--- a/layouts/partials/list-keyword.html
+++ b/layouts/partials/list-keyword.html
@@ -9,6 +9,6 @@
     </div>
       {% endif %}
 {% endif %}
-{# This creates the hit entries for _one_ keyword page: Tags/Berlin.html     #}
-{# This will probably never print something under Tags aka Tags/index.html,  #}
-{# look for siblings instead  #}
+{# This will create the hit entries for _one_ keyword page:                  #}
+{# Tags/Berlin.html. This will probably never print anything under Tags aka  #}
+{# Tags/index.html, look for siblings instead                                #}
