--- a/layouts/partials/list-siblings.html
+++ b/layouts/partials/list-siblings.html
@@ -9,5 +9,4 @@
     </div>
 {% endif %}
 {# This prints the list of keywords under a category like Tags|Categories,   #}
-{# because every keyword under a category is a sibling to the index.html     #}
-
+{# because each keyword under a category is a sibling of index.html.         #}
